--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -9,7 +9,7 @@
   flex: 1;
   display: flex;
   flex-direction: column;
-  padding: 32px;
+  padding: 12px 32px;
   position: relative;
   max-width: 100%;
   margin: 0 auto;
