--- a/src/styles/Playlists.css
+++ b/src/styles/Playlists.css
@@ -2,7 +2,7 @@
   width: 100%;
   height: 100%;
   overflow-y: auto;
-  padding: 32px;
+  padding: 16px 32px;
   background: #121212;
 }
 
